System is not not depended on knowing beforehand what device to support
